--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "ava",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "uglify-fe": "uglifyjs ./messagelabs-client.js -o messagelabs.min.js -c",
+    "build-fe": "babel fe-client.js --out-file messagelabs-client.js"
   },
   "keywords": [
     "client",
@@ -18,11 +20,13 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.3",
     "babel-plugin-transform-builtin-extend": "^1.1.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "eslint": "^4.6.1",
     "eslint-config-airbnb-base": "^12.0.0",
     "eslint-plugin-babel": "^4.1.2",
-    "eslint-plugin-import": "^2.7.0"
+    "eslint-plugin-import": "^2.7.0",
+    "uglify-js": "^3.1.1"
   },
   "dependencies": {
     "request": "^2.81.0",
